--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   table_calendar: ^3.0.9
+  provider: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
