--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   table_calendar: ^3.0.9
   provider: ^6.1.2
+  flutter_localizations: # Add
+    sdk: flutter         # Add
 
 
   # The following adds the Cupertino Icons font to your application.
