--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  table_calendar: ^3.0.9
+  table_calendar: ^3.1.2
   provider: ^6.1.2
+  flutter_localizations: # Add
+    sdk: flutter
   shared_preferences: ^2.0.15
+  flutter_colorpicker: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_markdown: ^0.7.4+1
 
 dev_dependencies:
   flutter_test:
