--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_markdown: ^0.7.4+1
+  flutter_quill: ^10.8.5
+  google_fonts: ^5.0.0
+  flutter_font_picker: ^1.4.0
+  awesome_dialog: ^3.2.1
 
 dev_dependencies:
   flutter_test:
