--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_colorpicker: ^1.0.3
   uuid: ^3.0.6
+  scrollable_positioned_list: ^0.3.5
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
